routes to yelp working, post id to mysql ready

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,8 @@
 <h1>Hello!</h1>
+<form class="create-form">
+    <div class="form-group">
+        <label for="city">City:</label>
+        <input type="text" id="city" name="name">
+        <button id="search">Search</button>
+    </div>
+</form>
