added pre-get to city search to grab length for offset

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,6 +6,7 @@
         <button id="search">Search</button>
     </div>
 </form>
+<button id="proximity">Swipe Nearby!</button>
 
 
 <div class="restaurants">
