--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
         <button id="search">Search</button>
     </div>
 </form>
-<button disabled="true" id="proximity">Swipe Nearby!</button>
+<button id="proximity">Swipe Nearby!</button>
 
 
 <div class="restaurants">
