--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,4 @@
-<form action="/login" method="post">
+<form class="login">
     <div>
         <label>Username:</label>
         <input type="text" name="username"/>
@@ -10,4 +10,5 @@
     <div>
         <input type="submit" value="Log In"/>
     </div>
+    <p>Or sign up <a href="/">here</a></p>
 </form>
