--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,7 @@
 <h1>Hello!</h1>
+<a class="navbar-brand" href="/logout">
+    Logout
+</a>
 <form class="create-form">
     <div class="form-group">
         <label for="city">City:</label>
