--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,3 +16,18 @@
     </ul>
   </div>
 </nav>
+
+<form class="login">
+    <div>
+        <label>Username:</label>
+        <input type="text" name="username"/>
+    </div>
+    <div>
+        <label>Password:</label>
+        <input type="password" name="password"/>
+    </div>
+    <div>
+        <input type="submit" value="Log In"/>
+    </div>
+    <p>Or sign up <a href="/signup">here</a></p>
+</form>
