added static login/signup routes for navbar

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">Dine-or-Dash!</a>
+  <a class="navbar-brand" href="/index">Dine-or-Dash!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -7,10 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
-        <a class="nav-link" href="/login">Login</a>
+        <a class="nav-link" href="/login/static">Login</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/signup">Signup</a>
+        <a class="nav-link" href="/signup/static">Signup</a>
       </li>
     </ul>
   </div>
@@ -30,5 +30,5 @@
     <div>
         <input type="submit" value="Signup"/>
     </div>
-    <p>Or log in <a href="/login">here</a></p>
+    <p>Or log in <a href="/login/static">here</a></p>
 </form>
