modified likeBtn logic

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,8 +16,6 @@
   </div>
 </nav>
 
-
-
 <h1>Hello!</h1>
 <a class="navbar-brand" href="/logout">
     Logout
@@ -31,6 +29,7 @@
 </form>
 <button id="proximity">Swipe Nearby!</button>
 
+{{card}}
 
 <div class="restaurants">
 
