--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-	{{{ body }}}
 
+
+	{{{ body }}}
 
 
 <script src="https://code.jquery.com/jquery.js"></script>
@@ -17,6 +18,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
 <script src="/coffeescript/client.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/handlebars@latest/dist/handlebars.js"></script>
 <script src="/coffeescript/signup.js"></script>
 <script src="/coffeescript/login.js"></script>
 </body>
