liked page is displaying all liked in cards

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,6 +12,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/signup/static">Signup</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/liked">View Liked Restaurants</a>
+      </li>
     </ul>
   </div>
 </nav>
