--- a/views/liked.handlebars
+++ b/views/liked.handlebars
@@ -1,9 +1,62 @@
-<div id="card" class="ui cards">
-    <div class="image">
-        <img src={{restaurant.imageURL}}>
-    </div>
-    <div class="content">
-        <a class="header">{{restaurant.name}}</a>
-    </div>
-    <button id="yelp-btn" src={{restaurant.yelp}}></button>
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="/index">Dine-or-Dash!</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="/login/static">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/signup/static">Signup</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/liked">View Liked Restaurants</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+{{!-- Restaurant Cards --}}
+<section class="hbs-container-liked"></section>
+
+<script id="cards-hbs" type="text/x-handlebars-template">
+    \{{#each this}}
+        <div class="ui card">
+            <div class="image">
+                <img src=\{{this.pic_url}}>
+            </div>
+            <div class="content">
+                <h1 class="header">\{{this.name}}</h1>
+            </div>
+            <a href=\{{this.yelp_url}}>Get Info</a> 
+        </div>
+    \{{/each}}
+</script>
+<script src="https://code.jquery.com/jquery.js"></script>
+<script>
+    // Displays the card handlebar
+displayCardAPI = function() {
+    return $.get("/liked").then(function(res){
+        $.get("/liked/restaurants").then(function(result){
+            for (i=0;i<result.length;i++){
+                console.log(result[i]);
+            }
+            // get the template
+            var source = $("#cards-hbs").html();
+            // compile template:
+            var template = Handlebars.compile(source)
+            // apply template:
+            var restaurants = result;
+            console.log(restaurants[0].resID);
+            var context = template(restaurants);
+            // console.log(context);
+            // add result to the page:
+            $('.hbs-container-liked').empty().append(context);
+        })
+    });
+};
+displayCardAPI();
+</script>
