--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -20,18 +20,19 @@
 </nav>
 
 
-
-<form class="signup">
-    <div>
-        <label>Create Username:</label>
-        <input type="text" name="username"/>
-    </div>
-    <div>
-        <label>Create Password:</label>
-        <input type="text" name="password"/>
-    </div>
-    <div>
-        <input type="submit" value="Signup"/>
-    </div>
-    <p>Or log in <a href="/login/static">here</a></p>
-</form>
+<div class="form">
+  <form class="signup">
+      <div>
+          <label>Create Username:</label>
+          <input type="text" name="username"/>
+      </div>
+      <div>
+          <label>Create Password:</label>
+          <input type="text" name="password"/>
+      </div>
+      <div>
+          <input type="submit" value="Signup"/>
+      </div>
+      <p>Or log in <a href="/login/static">here</a></p>
+  </form>
+</div>
