--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,13 +18,14 @@
     </ul>
   </div>
 </nav>
-
-<a id="logout" href="/logout">
-    Logout
-</a>
+<div class="wrap">
+  <div id="return"></div>
+  <a id="logout" href="/logout">
+      Logout
+  </a>
+</div>
 <h1>Dine-or-Dash</h1>
-
-<div class="form">
+<div class="form" id="city-search">
   <form class="create-form">
       <div class="form-group">
           <label for="city">City:</label>
@@ -59,6 +60,8 @@
     </div>
   </div>
 </script>
-<div class="restaurants"></div>
+<div class="ui buttons restaurants">
+  
+</div>
 
 
