--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,11 +27,15 @@ h1 {
     display: flex;
     justify-content: space-between;
 }
+.wrapBtns {
+    display: flex;
+    justify-content: space-between;
+}
 /* .content {
     background-image: url(https://st3.depositphotos.com/3649089/16657/v/1600/depositphotos_166571356-stock-illustration-red-checkered-texture-restaurant-seamless.jpg) !important;
 } */
-.ui.card>.image{
-    height: 12.5rem;
+.ui.centered.card>.image{
+    height: 13.5rem;
     overflow: hidden;
 }
 .hbs-container {
