--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -43,53 +43,12 @@
   <section class="hbs-container"></section>
 </div>
 
-<div id="restaurant-content"  style="display: none;">
-  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img id="pic1" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 id="person1"></h5>
-          <p id="review1"></p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img id="pic2" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 id="person2"></h5>
-          <p id="review2"></p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img id="pic3" class="d-block w-100" alt="...">
-        <div class="carousel-caption d-none d-md-block">
-          <h5 id="person3"></h5>
-          <p id="review3"></p>
-        </div>
-      </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-</div>
-
 <script src="https://code.jquery.com/jquery.js"></script>
 <script id="card-hbs" type="text/x-handlebars-template">
   <div class="wrap">
     <div class="ui centered card">
-        <div class="image">
-            <img src=\{{imageURL}} style="min-height: 100%; min-width: 100%;">
+        <div class="image index-card" style="min-width: 100%">
+            <img src=\{{imageURL}}>
         </div>
         <div class="content">
             <h1 class="header">\{{name}}</h1>
@@ -102,4 +61,45 @@
         </div>
     </div>
   </div>
+  <div id="restaurant-content"  style="display: none;">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img id="pic1" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 id="person1"></h5>
+            <p id="review1"></p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img id="pic2" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 id="person2"></h5>
+            <p id="review2"></p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img id="pic3" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5 id="person3"></h5>
+            <p id="review3"></p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
 </script>
+ {{!-- style="min-height: 100%; min-width: 100%;" --}}
