--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="/index">Dine-or-Dash!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -25,12 +25,17 @@
   </a>
 </div>
 <h1>Dine-or-Dash</h1>
+
 <div class="form" id="city-search">
   <form class="create-form">
       <div class="form-group">
-          <label for="city">City:</label>
+        <div class="ui large icon input">
+  <input type="text" id="city" name="name" placeholder="Search city">
+  <button id="search"><i class="search icon"></i></button>
+</div>
+          {{!-- <label for="city">City:</label>
           <input type="text" id="city" name="name">
-          <button id="search">Search</button>
+          <button id="search">Search</button> --}}
       </div>
   </form>
   <button id="proximity">Swipe Nearby!</button>
