--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,10 +31,7 @@ hr {
 .wrap {
     display: flex;
     justify-content: space-between;
-<<<<<<< HEAD
-=======
     
->>>>>>> f6523a349ce864129d2822943ea4a250673d07e6
 }
 .wrapBtns {
     display: flex;
@@ -122,10 +119,7 @@ hr {
 }
 #logout {
     margin-right: 0.5rem;
-<<<<<<< HEAD
-=======
     background-color: white;
->>>>>>> f6523a349ce864129d2822943ea4a250673d07e6
 }
 
 .navbar-brand{
@@ -134,15 +128,18 @@ hr {
     
 }
 
+#like {
+    margin-left: 10rem;
+    background-color: white !important;
+}
+#dislike {
+    margin-right: 10rem;
+    background-color: white !important;
+}
 
-<<<<<<< HEAD
-=======
 
 
 
-
-
->>>>>>> f6523a349ce864129d2822943ea4a250673d07e6
 /* * {
     margin: 0;
     padding: 0;
