--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -56,25 +56,6 @@ hr {
     border-top-left-radius: 1rem;
     z-index: 1000;
 }
-/* text on carousel */
-#wrap-content {
-    font-size: 0.75rem;
-    background-color: white;
-    min-width: 100%;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    border: solid 0.25rem black;
-    border-radius: 2rem;
-    color: black;
-}
-#person1, #person2, #person3 {
-    font-size: 0.5rem;
-    margin-top:0.25rem;
-    margin-bottom: 0.25rem;
-}
-#review1, #review2, #review3 {
-    margin-bottom: 0.25rem;
-}
 .d-block {
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
@@ -94,12 +75,6 @@ hr {
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
     overflow: hidden;
-}
-#pic1, #pic2, #pic3 {
-    border-top-left-radius: 1rem;
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 0rem;
-    border-bottom-left-radius: 0rem;
 }
 .ui.centered.card{
     margin-top: 1rem;
@@ -128,14 +103,20 @@ hr {
     margin-bottom: 1rem;
     padding-top: 1rem;
 }
-#logout {
-    margin-right: 0.5rem;
-    background-color: white;
+i.icon, i.icons {
+    font-size: 2rem;
+    position: absolute;
+    top: 0;
+    right: -5px;
 }
 .navbar-brand{
     font-size: 30px;
     font-family: 'Faster One', cursive;
     
+}
+#logout {
+    margin-right: 0.5rem;
+    background-color: white;
 }
 #like {
     width: 20rem;
@@ -146,6 +127,31 @@ hr {
     width: 20rem;
     background-color: #C0C0C0!important;
     border-bottom-left-radius: 1rem;
+}
+/* text on carousel */
+#wrap-content {
+    font-size: 0.75rem;
+    background-color: white;
+    min-width: 100%;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    border: solid 0.25rem black;
+    border-radius: 2rem;
+    color: black;
+}
+#pic1, #pic2, #pic3 {
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 0rem;
+    border-bottom-left-radius: 0rem;
+}
+#person1, #person2, #person3 {
+    font-size: 0.5rem;
+    margin-top:0.25rem;
+    margin-bottom: 0.25rem;
+}
+#review1, #review2, #review3 {
+    margin-bottom: 0.25rem;
 }
 /* * {
     margin: 0;
