--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,10 @@
         <a class="nav-link" href="/signup/static">Signup</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/liked">View Liked Restaurants</a>
+        <a class="nav-link" href="/liked">Liked Restaurants</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/favorites">Favorite Restaurants</a>
       </li>
     </ul>
   </div>
