--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,10 @@
+body { 
+    background: url(../assets/hero.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 h1 {
     text-align: center;
 
@@ -18,6 +25,7 @@ hr {
     justify-content: center;
     margin-left: 0.25rem;
     margin-right: 0.25rem;
+    margin-bottom: 2rem;
 }
 .ui.cards>.card>.image {
     height: 12.5rem;
@@ -88,6 +96,9 @@ hr {
     border-top-right-radius: 1rem;
     border-top-left-radius: 1rem;
 }
+.ui.cards>.card>.image>img {
+    height: inherit;
+}
 .ui.card>.image:not(.ui)>img {
     width: 40rem;
     max-width: 40rem;
@@ -120,7 +131,6 @@ hr {
 }
 #logout {
     margin-right: 0.5rem;
-    background-color: white;
 }
 #like {
     width: 20rem;
@@ -168,6 +178,8 @@ hr {
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 0rem;
     border-bottom-left-radius: 0rem;
+    background-size: cover;
+    background-position: center;
 }
 #person1, #person2, #person3 {
     font-size: 0.5rem;
@@ -176,6 +188,11 @@ hr {
 }
 #review1, #review2, #review3 {
     margin-bottom: 0.25rem;
+}
+#attribution {
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 /* * {
     margin: 0;
