--- a/views/liked.handlebars
+++ b/views/liked.handlebars
@@ -34,7 +34,8 @@
           <div class="image">
             <i id="favorite" class="heart icon"></i>
             <i id="delete" class="window close icon"></i>
-            <img src=\{{this.pic_url}} style="min-height: 100%; min-width: 100%;">
+            <img style="background-image: url(\{{this.pic_url}}); background-size: cover;
+            background-position: center;">
           </div>
           <div class="content">
               <h1 class="header">\{{this.name}}</h1>
