--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,4 +1,3 @@
-<form class="login">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="/index">Dine-or-Dash!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,7 +23,7 @@
 </nav>
 
 <div class="form">
-  <form class="login">
+  <form class="login ui form">
       <div>
           <label>Username:</label>
           <input type="text" name="username"/>
@@ -34,7 +33,7 @@
           <input type="password" name="password"/>
       </div>
       <div>
-          <input type="submit" value="Log In"/>
+          <button class="ui button" type="submit"/>Log In</button>
       </div>
       <p>Or sign up <a href="/signup/static">here</a></p>
   </form>
