--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -22,9 +22,8 @@
   </div>
 </nav>
 
-
 <div class="form">
-  <form class="signup">
+  <form class="signup ui form">
       <div>
           <label>Create Username:</label>
           <input type="text" name="username"/>
@@ -34,7 +33,7 @@
           <input type="text" name="password"/>
       </div>
       <div>
-          <input type="submit" value="Signup"/>
+          <button class="ui button" type="submit"/>Signup</button>
       </div>
       <p>Or log in <a href="/login/static">here</a></p>
   </form>
