--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,6 +30,14 @@
 <h1>Dine-or-Dash</h1>
 
 <div class="form" id="city-search">
+  <div class="ui action input">
+    <input id="city" type="text" name="name" placeholder="Search city">
+    <button id="search" class="ui icon button"><i class="search icon"></i></button>
+  </div>
+  <button class="ui button" id="proximity">Swipe Nearby!</button>
+</div>
+
+{{!-- <div class="form" id="city-search">
   <form class="create-form">
       <div class="form-group">
         <div class="ui large icon input">
@@ -39,7 +47,7 @@
       </div>
   </form>
   <button id="proximity">Swipe Nearby!</button>
-</div>
+</div> --}}
 
 <div class="content"><div id="loader" class="ui disabled text loader">Loading</div></div>
 
@@ -136,6 +144,7 @@
               on  
             </div>
           </div>
+          <hr>
           <div class="meta">
             <p class="comment">
               \{{comment}}
