added linter dependancy

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -24,17 +24,17 @@
 
 <div class="form">
   <form class="login ui form">
-      <div>
-          <label>Username:</label>
-          <input type="text" name="username"/>
-      </div>
-      <div>
-          <label>Password:</label>
-          <input type="password" name="password"/>
-      </div>
-      <div>
-          <button class="ui button" type="submit"/>Log In</button>
-      </div>
-      <p>Or sign up <a href="/signup/static">here</a></p>
+    <div>
+        <label>Username:</label>
+        <input type="text" name="username"/>
+    </div>
+    <div>
+        <label>Password:</label>
+        <input type="password" name="password"/>
+    </div>
+    <div>
+        <button class="ui button enter" type="submit"/>Log In</button>
+    </div>
+    <p>Or sign up <a href="/signup/static">here</a></p>
   </form>
 </div>
