--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -146,10 +146,14 @@ hr {
 .ui.feed>.event>.content .summary {
     font-size: 0.75em;
 }
+.enter {
+    margin-top: 1rem!important;
+}
 #wrap-att {
     position: absolute;
     bottom: 0;
-    left: 0;
+    left: 50%;
+    right: 50%;
 }
 #proximity {
     margin-top: 2rem;
@@ -218,9 +222,12 @@ hr {
     margin-bottom: 0.25rem;
 }
 #attribution {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
+    right: 30%;
+    z-index: -1;
+    width: 100%;
 }
 /* * {
     margin: 0;
