--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -24,17 +24,17 @@
 
 <div class="form">
   <form class="signup ui form">
-      <div>
-          <label>Create Username:</label>
-          <input type="text" name="username"/>
-      </div>
-      <div>
-          <label>Create Password:</label>
-          <input type="text" name="password"/>
-      </div>
-      <div>
-          <button class="ui button" type="submit"/>Signup</button>
-      </div>
-      <p>Or log in <a href="/login/static">here</a></p>
+    <div>
+        <label>Create Username:</label>
+        <input type="text" name="username"/>
+    </div>
+    <div>
+        <label>Create Password:</label>
+        <input type="text" name="password"/>
+    </div>
+    <div>
+        <button class="ui button enter" type="submit"/>Signup</button>
+    </div>
+    <p>Or log in <a href="/login/static">here</a></p>
   </form>
 </div>
